seaqt/QtPositioning/gen_qgeopath.h

class QGeoCoordinate;
class QGeoPath;
class QGeoShape;
class QMetaObject;
class QVariant;
typedef struct QGeoCoordinate QGeoCoordinate;
typedef struct QGeoPath QGeoPath;
typedef struct QGeoShape QGeoShape;
typedef struct QMetaObject QMetaObject;
typedef struct QVariant QVariant;
QGeoPath* QGeoPath_new();
QGeoPath* QGeoPath_new2(struct seaqt_array /* of QGeoCoordinate* */  path);
QGeoPath* QGeoPath_new3(QGeoPath* other);
QGeoPath* QGeoPath_new4(QGeoShape* other);
QGeoPath* QGeoPath_new5(struct seaqt_array /* of QGeoCoordinate* */  path, const double* width);
void QGeoPath_operatorAssign(QGeoPath* self, QGeoPath* other);
void QGeoPath_setPath(QGeoPath* self, struct seaqt_array /* of QGeoCoordinate* */  path);
struct seaqt_array /* of QGeoCoordinate* */  QGeoPath_path(const QGeoPath* self);
void QGeoPath_clearPath(QGeoPath* self);
void QGeoPath_setVariantPath(QGeoPath* self, struct seaqt_array /* of QVariant* */  path);
struct seaqt_array /* of QVariant* */  QGeoPath_variantPath(const QGeoPath* self);
void QGeoPath_setWidth(QGeoPath* self, const double* width);
double QGeoPath_width(const QGeoPath* self);
void QGeoPath_translate(QGeoPath* self, double degreesLatitude, double degreesLongitude);
QGeoPath* QGeoPath_translated(const QGeoPath* self, double degreesLatitude, double degreesLongitude);
double QGeoPath_length(const QGeoPath* self);
ptrdiff_t QGeoPath_size(const QGeoPath* self);
void QGeoPath_addCoordinate(QGeoPath* self, QGeoCoordinate* coordinate);
void QGeoPath_insertCoordinate(QGeoPath* self, ptrdiff_t index, QGeoCoordinate* coordinate);
void QGeoPath_replaceCoordinate(QGeoPath* self, ptrdiff_t index, QGeoCoordinate* coordinate);
QGeoCoordinate* QGeoPath_coordinateAt(const QGeoPath* self, ptrdiff_t index);
bool QGeoPath_containsCoordinate(const QGeoPath* self, QGeoCoordinate* coordinate);
void QGeoPath_removeCoordinate(QGeoPath* self, QGeoCoordinate* coordinate);
void QGeoPath_removeCoordinateWithIndex(QGeoPath* self, ptrdiff_t index);
struct seaqt_string QGeoPath_toString(const QGeoPath* self);
double QGeoPath_lengthWithIndexFrom(const QGeoPath* self, ptrdiff_t indexFrom);
double QGeoPath_length2(const QGeoPath* self, ptrdiff_t indexFrom, ptrdiff_t indexTo);
const QMetaObject* QGeoPath_staticMetaObject();